--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,15 +33,21 @@
             <i class="fas fa-concierge-bell"></i> Services
           </a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="carDetailDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown" [class.show]="isDropdownOpen">
+          <button 
+            class="nav-link dropdown-toggle btn btn-link" 
+            id="carDetailDropdown" 
+            type="button"
+            (click)="toggleDropdown()"
+            [attr.aria-expanded]="isDropdownOpen"
+            (keydown)="onDropdownKeydown($event)">
             <i class="fas fa-sparkles"></i> Car Detail
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="carDetailDropdown">
-            <li><a class="dropdown-item" routerLink="/cleaning/deep">
-              <i class="fas fa-magic"></i> Deep Cleaning
+          </button>
+          <ul class="dropdown-menu" [class.show]="isDropdownOpen" aria-labelledby="carDetailDropdown">
+            <li><a class="dropdown-item" routerLink="/cleaning/deep" (click)="closeDropdown()">
+              <i class="fas fa-wand-magic-sparkles"></i> Deep Cleaning
             </a></li>
-            <li><a class="dropdown-item" routerLink="/cleaning/light">
+            <li><a class="dropdown-item" routerLink="/cleaning/light" (click)="closeDropdown()">
               <i class="fas fa-broom"></i> Light Cleaning
             </a></li>
           </ul>
