fix: Adjust padding in navbar links and correct section structure in U-Haul page

--- a/src/app/pages/uhaul/uhaul.component.html
+++ b/src/app/pages/uhaul/uhaul.component.html
@@ -1,4 +1,4 @@
-<section class="uhaul-hero"></section>
+<section class="uhaul-hero">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -9,6 +9,7 @@
       </div>
     </div>
   </div>
+</section>
 <section class="uhaul-section py-5">
   <div class="container">
     <div class="row">
