fix: Update branding references from SparkleWash Pro to CarWashWebsite across multiple components

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <!-- Logo -->
     <a class="navbar-brand" routerLink="/">
       <i class="fas fa-car"></i>
-      <span class="brand-text">SparkleWash Pro</span>
+      <span class="brand-text">CarWashWebsite</span>
     </a>
 
     <!-- Mobile Menu Toggle -->
