--- a/src/app/pages/appointment/appointment.component.html
+++ b/src/app/pages/appointment/appointment.component.html
@@ -240,7 +240,7 @@
       <div class="col-12 text-center">
         <h4>Need Help?</h4>
         <p>Call us directly at <a href="tel:+1234567890"><strong>(234) 567-8900</strong></a> or email us at 
-        <a href="mailto:info&#64;sparklewashpro.com"><strong>info&#64;sparklewashpro.com</strong></a></p>
+        <a href="mailto:info&#64;carwashwebsite.com"><strong>info&#64;carwashwebsite.com</strong></a></p>
       </div>
     </div>
   </div>
