--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
           <div class="footer-section">
             <div class="footer-logo mb-3">
               <i class="fas fa-car"></i>
-              <span class="brand-text">SparkleWash Pro</span>
+              <span class="brand-text">CarWashWebsite</span>
             </div>
             <p class="footer-description">
               Your premier destination for professional car wash, detailing, and U-Haul rental services. 
@@ -82,7 +82,7 @@
                 <i class="fas fa-envelope"></i>
                 <div>
                   <strong>Email:</strong><br>
-                  <a href="mailto:info&#64;sparklewashpro.com">info&#64;sparklewashpro.com</a>
+                  <a href="mailto:info&#64;carwashwebsite.com">info&#64;carwashwebsite.com</a>
                 </div>
               </div>
               <div class="contact-item">
@@ -106,7 +106,7 @@
       <div class="row align-items-center">
         <div class="col-md-6">
           <p class="copyright">
-            &copy; {{ currentYear }} SparkleWash Pro. All rights reserved.
+            &copy; {{ currentYear }} CarWashWebsite. All rights reserved.
           </p>
         </div>
         <div class="col-md-6">
