--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -152,6 +152,8 @@
     transition: all 0.3s ease;
     height: 100%;
     border: 1px solid rgba(102, 126, 234, 0.1);
+    display: flex;
+    flex-direction: column;
 
     &:hover {
       transform: translateY(-10px);
@@ -176,6 +178,10 @@
     }
 
     .service-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+
       h4 {
         font-size: 1.4rem;
         font-weight: 600;
@@ -192,7 +198,7 @@
       .service-features {
         list-style: none;
         padding: 0;
-        margin-bottom: 2rem;
+        margin-bottom: auto;
         text-align: left;
 
         li {
@@ -214,6 +220,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-top: auto;
+        padding-top: 1rem;
 
         .service-price {
           font-size: 1.3rem;
