--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 text-center">
         <h1 class="hero-title">Contact <span class="gradient-text">Us</span></h1>
-        <p class="hero-subtitle">Get in touch with CarWashWebsite</p>
+        <p class="hero-subtitle">Get in touch with JF Detail Centre</p>
       </div>
     </div>
   </div>
@@ -32,7 +32,7 @@
             <i class="fas fa-envelope"></i>
             <div>
               <strong>Email:</strong><br>
-              <a href="mailto:info&#64;carwashwebsite.com">info&#64;carwashwebsite.com</a>
+              <a href="mailto:info&#64;jfdetailcentre.com">info&#64;jfdetailcentre.com</a>
             </div>
           </div>
         </div>
