--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -68,14 +68,14 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <div>
                   <strong>Address:</strong><br>
-                  123 Clean Street, Wash City, WC 12345
+                  376 Memorial Ave, Thunder Bay, ON P7B 3Y3, Canada
                 </div>
               </div>
               <div class="contact-item">
                 <i class="fas fa-phone"></i>
                 <div>
                   <strong>Phone:</strong><br>
-                  <a href="tel:+1234567890">+1 (234) 567-8900</a>
+                  <a href="tel:+18076328799">+1 (807) 632-8799</a>
                 </div>
               </div>
               <div class="contact-item">
